- 
    Type:Bug 
- 
    Resolution: Fixed
- 
    Priority:Major - P3 
- 
    Affects Version/s: None
- 
    Component/s: None
- 
    None
- 
        Fully Compatible
- 
        ALL
- 
        v6.1, v6.0
- 
        Execution Team 2021-11-01, Execution Team 2021-11-15, Execution Team 2021-12-13, Execution Team 2021-12-27, Execution Team 2022-01-10, Execution Team 2022-01-24, Execution Team 2022-02-07, Execution Team 2022-02-21, Execution Team 2022-09-19
- 
        None
- 
        None
- 
        None
- 
        None
- 
        None
- 
        None
- 
        None
When recovering from oplogs as a standalone server, 'removeIndexBuildEntry()' can make untimestamped writes to 'config.system.indexBuilds' collection and '_mdb_catalog'.
- depends on
- 
                    SERVER-64760 Correctly timestamp catalog writes for index recovery when an oplog entry timestamp is present -         
- Closed
 
-         
- is related to
- 
                    SERVER-69589 Two-phase index builds can leave leftover entries in 'config.system.indexBuilds' -         
- Blocked
 
-         
- 
                    SERVER-60037 Enable the ordered timestamp assertion in MongoDB -         
- Closed
 
-