SERVER-60753 Skip removing index build entries explicitly from 'config.system.indexBuilds' when recovering from the oplog as a standalone

(cherry picked from commit c7f9bb9676a8859a21aaea5fdd81e23a4e9d79e8)